Ticket is no longer visible on first load
>User must generate ticket to see initial ticket
>Added minor animation for ticket

--- a/src/App.scss
+++ b/src/App.scss
@@ -76,5 +76,5 @@ main {
     border-bottom-right-radius: $curved-borders;
     height: 100%;
     width: 100%;
-    @include flexRowCenter;
+    @include flexCol;
 }
